Problema com o controller

--- a/app/client/templates/pages/radio/layouts/headerFMMN.html
+++ b/app/client/templates/pages/radio/layouts/headerFMMN.html
@@ -1,11 +1,11 @@
-<template name="header">
+<template name="headerFMMN">
 
   <nav class="main-header">
     <div class="nav-wrapper">
 
       <div class="left">
         <a href="/" class="brand-logo">
-          <img src="/images/system/logo.png" alt="" />
+          <img src="/images/television/logo.png" alt="" />
         </a>
       </div>
 
