--- a/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
@@ -1,16 +1,15 @@
-<template name="header">
+<template name="headerNewspaper">
 
   <nav class="main-header">
     <div class="nav-wrapper">
 
       <div class="left">
         <a href="/" class="brand-logo">
-          <img src="/images/system/logo.png" alt="" />
+          <img src="/images/television/logo.png" alt="" />
         </a>
       </div>
 
       <ul class="right">
-        <li><a href="#"><i class="material-icons">search</i></a></li>
         <li><a href="#"><i class="material-icons">more_vert</i></a></li>
       </ul>
 
