Corrigindo os headers

--- a/app/client/templates/pages/radio/mnfm.html
+++ b/app/client/templates/pages/radio/mnfm.html
@@ -1,6 +1,6 @@
 <template name="mnfm">
 
-  {{> yield "headerMNFM"}}
+  {{> yield "header"}}
 
   Meio Norte FM Rádio com o player e as interações com os usuários :D
 </template>
