--- a/app/client/templates/pages/television/television.html
+++ b/app/client/templates/pages/television/television.html
@@ -1,6 +1,6 @@
 <template name="television">
 
-  {{> yield "headerTelevision"}}
+  {{> yield "header"}}
 
   Rede Meio Norte, aqui vai o fluxo do VTV com as adaptações :D
 
