Configurando App, vamos rever as config=s

--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1,16 +1,12 @@
 /** Autor: Allan Alexandre
 *** ================================ */
 
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic);
-
 .main-header {
   margin-bottom:20px;
 
-
-
   .left {
     .brand-logo {
-      left:20%;
+      left:20px;
     }
   }
 
