--- a/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
@@ -4,8 +4,8 @@
     <div class="nav-wrapper">
 
       <div class="left">
-        <a href="/" class="brand-logo">
-          <img src="/images/television/logo.png" alt="" />
+        <a href="/jornal" class="brand-logo">
+          Jornal Meio Norte
         </a>
       </div>
 
