--- a/app/client/templates/pages/radio/layouts/headerBOAFM.html
+++ b/app/client/templates/pages/radio/layouts/headerBOAFM.html
@@ -5,7 +5,7 @@
 
       <div class="left">
         <a href="/" class="brand-logo">
-          <img src="/images/television/logo.png" alt="" />
+          BOA FM
         </a>
       </div>
 
