--- a/app/client/templates/pages/television/layouts/headerTelevision.html
+++ b/app/client/templates/pages/television/layouts/headerTelevision.html
@@ -5,7 +5,7 @@
 
       <div class="left">
         <a href="/" class="brand-logo">
-          <img src="/images/television/logo.png" alt="" />
+          <img src="/images/television/logo.png" height="32" alt="" />
         </a>
       </div>
 
