--- a/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
+++ b/app/client/templates/pages/newspaper/layouts/headerNewspaper.html
@@ -1,19 +1,27 @@
 <template name="headerNewspaper">
 
-  <nav class="main-header">
+  <nav class="header">
+
     <div class="nav-wrapper">
 
-      <div class="left">
-        <a href="/jornal" class="brand-logo">
-          Jornal Meio Norte
+      <div class="side-left">
+        <a href="#" class="button btn-flat button-collapse" data-activates="main-navigation">
+          <img src="images/home/icons/menu.svg" height="18" />
         </a>
       </div>
 
-      <ul class="right">
-        <li><a href="#"><i class="material-icons">more_vert</i></a></li>
-      </ul>
+      <a href="#" class="logo">
+        Jornal Meio Norte
+      </a>
+
+      <div class="side-right">
+        <a href="#modal-about" class="button btn-flat modal-trigger">
+          <img src="images/home/icons/info.svg" height="22" />
+        </a>
+      </div>
 
     </div>
+
   </nav>
 
 </template>
