--- a/app/client/templates/pages/newspaper/newspaper.html
+++ b/app/client/templates/pages/newspaper/newspaper.html
@@ -1,7 +1,11 @@
 <template name="newspaper">
 
-  {{> yield "header"}}
+  <div class="transitions-content">
 
-  Feed do Jornal se possível com filtros
+    {{> yield "header"}}
+
+    Feed do Jornal se possível com filtros
+
+  </div>
 
 </template>
