--- a/app/client/templates/pages/television/television.html
+++ b/app/client/templates/pages/television/television.html
@@ -1,7 +1,11 @@
 <template name="television">
 
-  {{> yield "header"}}
+   <div class="transitions-content">
 
-  Rede Meio Norte, aqui vai o fluxo do VTV com as adaptações :D
+    {{> yield "header"}}
+
+    Rede Meio Norte, aqui vai o fluxo do VTV com as adaptações :D
+
+  </div>
 
 </template>
