--- a/app/client/templates/pages/home/home.html
+++ b/app/client/templates/pages/home/home.html
@@ -46,7 +46,7 @@
           </a>
         </div>
         <div class="box-radios col s6">
-          <a href="#" data-transition-out="scaleOut" data-transition-in="scaleIn">
+          <a href="#modal-change-radio" class="modal-trigger">
             <img src="images/home/icons/icon-radios.png" height="100" />
             <strong>RÁDIOS</strong>
           </a>
@@ -58,6 +58,7 @@
     {{> about }}
     {{> editProfile }}
     {{> errorReport }}
+    {{> changeRadio }}
 
   </div>
 
