--- a/app/client/templates/pages/television/layouts/headerTelevision.html
+++ b/app/client/templates/pages/television/layouts/headerTelevision.html
@@ -3,11 +3,22 @@
   <nav class="main-header header">
 
     <div class="side-left">
-      <a href="{{ pathFor 'home' }}" class="button btn-flat" data-transition-out="slideFadeRightOut" data-transition-in="slideFadeLeftIn">
-        <img src="images/home/icons/icon-back.svg" height="18" />
+      <a href="#" class="button btn-flat button-collapse" data-activates="main-navigation">
+        <img src="images/television/icons/icon-navigation.svg" height="16" />
+      </a>
+    </div>
+
+    <a href="#" class="logo center-align">
+      <img src="images/television/logo-white-hor.png" height="30" />
+    </a>
+
+    <div class="side-right">
+      <a href="#modal-about" class="button btn-flat modal-trigger">
+        <img src="images/television/icons/icon-tv.svg" height="22" />
       </a>
     </div>
 
   </nav>
+
 
 </template>
