--- a/app/client/templates/pages/home/home.scss
+++ b/app/client/templates/pages/home/home.scss
@@ -48,19 +48,7 @@
   }
 
 
-  .modal {
-    top:0!important;
-    left:0!important;
-    width:100%!important;
-    border-radius:0!important;
-    height:100%!important;
-    max-height:100%!important;
-    color:#212121;
-    background:#fff;
-    .modal-content {
-      padding:0!important;
-    }
-  }
+
 
 }
 
@@ -80,6 +68,9 @@
       padding: 15px;
       width: 300px;
       background: #f8f8fc;
+      a {
+        line-height:22px;height:22px;
+      }
       img {
         float:left;margin-right:15px;
       }
@@ -100,6 +91,44 @@
       height:46px;line-height:46px;
       img {margin-right:10px;float:left;margin-top:12px;}
       span {line-height:48px;color:#666;font-weight:400;}
+    }
+  }
+}
+
+.change-image {margin: 5px 8px;height: 32px;}
+
+.checkbox-field {
+  padding:22px 0.75rem!important;
+}
+.social-checkbox {
+  padding:5px 0.75rem !important;color:#9e9e9e;
+  i {
+    font-size:18px;
+  }
+}
+
+.file-field {
+  display:table;width:100%;
+  .title-form {
+    font-weight:normal!important;color:#9e9e9e!important;font-size:1rem!important;margin-bottom:10px;
+  }
+  .file-path {
+    border:0 none!important;width:0!important;height:0!important;
+  }
+}
+
+.upload-image-element {
+  background: #f8f8fc;
+  display:table;width:100%;
+  padding: 90px 0;
+  text-align: center;
+}
+
+
+#modal-error-report {
+  .file-field {
+    .title-form {
+      margin-bottom:10px;
     }
   }
 }
