--- a/app/client/templates/pages/home/pages/editProfile.html
+++ b/app/client/templates/pages/home/pages/editProfile.html
@@ -9,6 +9,10 @@
       <h4 class="modal-title">
         Editar perfil
       </h4>
+
+      <a href="#modal-change-photo" class="change-image right modal-trigger">
+        <img src="images/home/icons/icon-upload-image.svg" height="28" />
+      </a>
     </header>
     <div class="form-pattern modal-content">
 
@@ -25,12 +29,107 @@
           <label for="name" class="">Nome</label>
         </div>
 
+        <div class="input-field col s12">
+          <input id="mail" type="text">
+          <label for="mail" class="">E-mail</label>
+        </div>
+
+        <div class="input-field col s12">
+          <input id="phone" type="text">
+          <label for="phone" class="">Telefone</label>
+        </div>
+
+        <div class="input-field col s12">
+          <input id="location" type="text">
+          <label for="location" class="">Localização</label>
+        </div>
+
+        <strong class="title-form" style="margin-top:20px;">Notificações</strong>
+
+        <div class="checkbox-field col s12">
+
+          <span class="left">Ativar notificações</span>
+
+          <div class="right">
+            <div class="switch">
+              <label>
+                <input type="checkbox">
+                <span class="lever"></span>
+              </label>
+            </div>
+          </div>
+
+        </div>
+
+
+        <strong class="title-form" style="margin-bottom:15px;">Redes sociais</strong>
+
+        <div class="checkbox-field social-checkbox col s12">
+
+          <span class="left">
+            <i class="icon-facebook-rect txt-facebook"></i>
+            Facebook
+          </span>
+
+          <div class="right">
+            <div class="switch">
+              <label>
+                <input type="checkbox">
+                <span class="lever"></span>
+              </label>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="checkbox-field social-checkbox col s12">
+
+          <span class="left">
+            <i class="icon-twitter-bird txt-twitter"></i>
+            Twitter
+          </span>
+
+          <div class="right">
+            <div class="switch">
+              <label>
+                <input type="checkbox">
+                <span class="lever"></span>
+              </label>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="checkbox-field social-checkbox col s12">
+
+          <span class="left">
+            <i class="icon-googleplus-rect txt-google"></i>
+            Google
+          </span>
+
+          <div class="right">
+            <div class="switch">
+              <label>
+                <input type="checkbox">
+                <span class="lever"></span>
+              </label>
+            </div>
+          </div>
+
+        </div>
+
       </div>
 
     </div>
 
-    <div class="modal-footer">aa</div>
+    <div class="modal-footer">
+      <a class="btn" href="#">
+        SALVAR
+      </a>
+    </div>
 
   </section>
+
+  {{> changePhoto }}
 
 </template>
