--- a/app/client/templates/layouts/navigation.html
+++ b/app/client/templates/layouts/navigation.html
@@ -1,5 +1,5 @@
 <template name="navigation">
-  <ul id="main-navigation" class="side-nav fixed">
+  <ul id="main-navigation" class="side-nav">
     <li class="item-avatar">
       <img src="images/avatar/avatar1.png" height="60" />
       <strong class="truncate">Alexandre Garcia</strong>
