--- a/app/client/templates/pages/television/layouts/headerTelevision.html
+++ b/app/client/templates/pages/television/layouts/headerTelevision.html
@@ -3,18 +3,18 @@
   <nav class="main-header header">
 
     <div class="side-left">
-      <a href="#" class="button btn-flat button-collapse" data-activates="main-navigation">
+      <a href="#" class="button btn-flat button-collapse" data-activates="television-navigation">
         <img src="images/television/icons/icon-navigation.svg" height="16" />
       </a>
     </div>
 
     <a href="#" class="logo center-align">
-      <img src="images/television/logo-white-hor.png" height="30" />
+      <img src="images/television/logo-white-hor.png" height="28" />
     </a>
 
     <div class="side-right">
       <a href="#modal-about" class="button btn-flat modal-trigger">
-        <img src="images/television/icons/icon-tv.svg" height="22" />
+        <img src="images/television/icons/icon-tv.svg" height="22" style="margin:5px 0!important;" />
       </a>
     </div>
 
