--- a/app/client/templates/pages/television/television.html
+++ b/app/client/templates/pages/television/television.html
@@ -2,6 +2,8 @@
 
    <div class="television-page transitions-content">
 
+    <!-- {{> yield "navigation" }} -->
+
     {{> yield "header"}}
 
     <main class="content has-header">
