--- a/app/client/templates/pages/home/home.scss
+++ b/app/client/templates/pages/home/home.scss
@@ -98,7 +98,7 @@
     img {
       float:left;margin-right:15px;
     }
-    strong {font-size: 18px;margin-top:5px;}
+    strong {font-size: 18px;margin-top:8px;color:#666;}
     span {color:#666;font-size:12px;}
   }
   .item-nav {
