--- a/app/client/templates/pages/home/pages/editProfile.html
+++ b/app/client/templates/pages/home/pages/editProfile.html
@@ -10,7 +10,7 @@
         Editar perfil
       </h4>
 
-      <a href="#modal-change-photo" class="change-image right modal-trigger">
+      <a id="button-change-photo" href="#" class="change-image right">
         <img src="images/home/icons/icon-upload-image.svg" height="28" />
       </a>
     </header>
