--- a/app/client/templates/pages/television/layouts/headerTelevision.html
+++ b/app/client/templates/pages/television/layouts/headerTelevision.html
@@ -13,7 +13,7 @@
     </a>
 
     <div class="side-right">
-      <a href="#modal-about" class="button btn-flat modal-trigger">
+      <a href="#modal-play-tv" class="button btn-flat modal-trigger">
         <img src="images/television/icons/icon-tv.svg" height="22" style="margin:5px 0!important;" />
       </a>
     </div>
