--- a/app/client/templates/pages/television/pages/program/addMessage.html
+++ b/app/client/templates/pages/television/pages/program/addMessage.html
@@ -1,12 +1,14 @@
 <template name="addMessage">
-  <aside class="message">
+
+
+  <aside class="message roomUpIn">
 
     <div class="buttons-actions left">
       <a href="#">
-        <img src="images/television/icons/icon-photo.svg" height="16" />
+        <img src="/images/television/icons/icon-photo.svg" height="16" />
       </a>
       <a href="#">
-        <img src="images/television/icons/icon-video.svg" height="14" />
+        <img src="/images/television/icons/icon-video.svg" height="14" />
       </a>
     </div>
 
@@ -15,7 +17,7 @@
     </div>
 
     <button class="send-button btn btn-flat" type="submit">
-      <img src="images/television/icons/icon-send-active.svg" height="20" />
+      <img src="/images/television/icons/icon-send-active.svg" height="20" />
     </button>
 
   </aside>
