--- a/app/client/templates/pages/television/pages/program/pages/shareProgram.html
+++ b/app/client/templates/pages/television/pages/program/pages/shareProgram.html
@@ -1,11 +1,14 @@
 <template name="shareProgram">
 
-  <section id="modal-program-share" class="modal bottom-sheet">
+  <section id="modal-program-share" class="modal">
 
   <header class="modal-header">
-    <a href="{{ pathFor 'program' }}" class="modal-action modal-header-left modal-close">
+    <a href="{{ pathFor 'program' }}" class="modal-action modal-header-left modal-close" id="btn-show-message">
        <img src="images/home/icons/icon-close.svg" height="22" />
     </a>
+    <h4 class="modal-title">
+      Compartilhe
+    </h4>
   </header>
 
   </section>
