--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -6,7 +6,7 @@
 
       <div class="side-left">
         <a href="{{ pathFor 'television' }}" class="button btn-flat" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-          <img src="images/television/icons/icon-back-white.svg" height="22" />
+          <img src="/images/television/icons/icon-back-white.svg" height="22" />
         </a>
       </div>
 
@@ -15,8 +15,8 @@
       </a>
 
       <div class="side-right">
-        <a href="#modal-program-share" class="button btn-flat modal-trigger">
-          <img src="images/television/icons/icon-share.svg" height="24" />
+        <a href="#modal-program-share" class="button btn-flat modal-trigger" id="btn-share-message">
+          <img src="/images/television/icons/icon-share.svg" height="24" />
         </a>
       </div>
 
@@ -47,10 +47,10 @@
           <div class="tab-header">
             <ul class="tabs">
 
-              <li class="tab">
+              <li class="tab" id="btn-show-message">
                 <a class="active" href="#test1">Timeline</a>
               </li>
-              <li class="tab">
+              <li class="tab" id="btn-hide-message">
                 <a href="#test2">Enquete</a>
               </li>
 
@@ -64,7 +64,7 @@
 
                 <figure class="left">
                   <a href="#">
-                    <img src="images/avatar/avatar1.png" width="65" height="65" />
+                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
                   </a>
                 </figure>
 
@@ -75,7 +75,7 @@
                     </a>
                   </h4>
                   <div class="message-date">
-                    <img src="images/television/icons/icon-clock.svg" height="14" />
+                    <img src="/images/television/icons/icon-clock.svg" height="14" />
                     <span>12 min</span>
                   </div>
                 </div>
@@ -93,7 +93,7 @@
 
                 <figure class="left">
                   <a href="#">
-                    <img src="images/avatar/avatar1.png" width="65" height="65" />
+                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
                   </a>
                 </figure>
 
@@ -104,7 +104,7 @@
                     </a>
                   </h4>
                   <div class="message-date">
-                    <img src="images/television/icons/icon-clock.svg" height="14" />
+                    <img src="/images/television/icons/icon-clock.svg" height="14" />
                     <span>12 min</span>
                   </div>
                 </div>
@@ -115,7 +115,7 @@
                     Rua toda esburacada aqui no Parque Alvorada
                   </p>
                   <a href="#">
-                    <img src="images/television/img1.png" width="100%" />
+                    <img src="/images/television/img1.png" width="100%" />
                   </a>
                 </div>
 
@@ -125,7 +125,7 @@
 
                 <figure class="left">
                   <a href="#">
-                    <img src="images/avatar/avatar1.png" width="65" height="65" />
+                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
                   </a>
                 </figure>
 
@@ -136,36 +136,7 @@
                     </a>
                   </h4>
                   <div class="message-date">
-                    <img src="images/television/icons/icon-clock.svg" height="14" />
-                    <span>12 min</span>
-                  </div>
-                </div>
-
-
-                <div class="message-content">
-                  <p>
-                    Rua toda esburacada aqui no Parque Alvorada
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="message-item">
-
-                <figure class="left">
-                  <a href="#">
-                    <img src="images/avatar/avatar1.png" width="65" height="65" />
-                  </a>
-                </figure>
-
-                <div class="message-info">
-                  <h4 class="message-author">
-                    <a href="#">
-                      Aírton Menezes
-                    </a>
-                  </h4>
-                  <div class="message-date">
-                    <img src="images/television/icons/icon-clock.svg" height="14" />
+                    <img src="/images/television/icons/icon-clock.svg" height="14" />
                     <span>12 min</span>
                   </div>
                 </div>
@@ -183,7 +154,7 @@
 
                 <figure class="left">
                   <a href="#">
-                    <img src="images/avatar/avatar1.png" width="65" height="65" />
+                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
                   </a>
                 </figure>
 
@@ -194,7 +165,36 @@
                     </a>
                   </h4>
                   <div class="message-date">
-                    <img src="images/television/icons/icon-clock.svg" height="14" />
+                    <img src="/images/television/icons/icon-clock.svg" height="14" />
+                    <span>12 min</span>
+                  </div>
+                </div>
+
+
+                <div class="message-content">
+                  <p>
+                    Rua toda esburacada aqui no Parque Alvorada
+                  </p>
+                </div>
+
+              </div>
+
+              <div class="message-item">
+
+                <figure class="left">
+                  <a href="#">
+                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
+                  </a>
+                </figure>
+
+                <div class="message-info">
+                  <h4 class="message-author">
+                    <a href="#">
+                      Aírton Menezes
+                    </a>
+                  </h4>
+                  <div class="message-date">
+                    <img src="/images/television/icons/icon-clock.svg" height="14" />
                     <span>12 min</span>
                   </div>
                 </div>
