--- a/app/client/templates/pages/television/layouts/navigationTelevision.html
+++ b/app/client/templates/pages/television/layouts/navigationTelevision.html
@@ -2,7 +2,28 @@
 
   <ul id="television-navigation" class="side-nav">
 
-  aaa
+    <a href="{{ pathFor 'home' }}" title="Voltar para o início" class="back-to-home">
+      <i class="icon-left-2"></i>
+      <span>Voltar ao início</span>
+    </a>
+
+    <li class="item-nav">
+      <a class="link-nav" href="{{ pathFor 'aboutTelevision' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+        Conheça
+      </a>
+    </li>
+
+    <li class="item-nav">
+      <a class="link-nav" href="{{ pathFor 'programation' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+        Programação
+      </a>
+    </li>
+
+    <li class="item-nav">
+      <a class="link-nav" href="{{ pathFor 'contactTelevision' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+        Fale conosco
+      </a>
+    </li>
 
   </ul>
 
