--- a/app/client/templates/pages/television/television.html
+++ b/app/client/templates/pages/television/television.html
@@ -2,26 +2,47 @@
 
    <div class="television-page transitions-content">
 
-    <!-- {{> yield "navigation" }} -->
+    {{> yield "navigation" }}
 
     {{> yield "header"}}
 
     <main class="content has-header">
 
       <ul class="programs-list">
-        <li class="programs-list-item">
-          <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-            <img src="images/television/img-patrulha.png" width="100%" />
-          </a>
-        </li>
-        <li class="programs-list-item">
-          <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-            <img src="images/television/img-ronda.png" width="100%" />
-          </a>
-        </li>
+        <div class="list-category">
+          <strong>JORNALISMO POPULAR</strong>
+          <li class="programs-list-item">
+            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+              <img src="images/television/img-patrulha.png" width="100%" />
+            </a>
+          </li>
+          <li class="programs-list-item">
+            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+              <img src="images/television/img-ronda.png" width="100%" />
+            </a>
+          </li>
+        </div>
+        <div class="list-category">
+          <strong>ESPORTIVIDADE</strong>
+          <li class="programs-list-item">
+            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+              <img src="images/television/img-ole.png" width="100%" />
+            </a>
+          </li>
+        </div>
+        <div class="list-category">
+          <strong>DOMINGO AVENTURA</strong>
+          <li class="programs-list-item">
+            <a href="{{ pathFor 'program' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+              <img src="images/television/img-incrivel.png" width="100%" />
+            </a>
+          </li>
+        </div>
       </ul>
 
     </main>
+
+    {{> playTv }}
 
   </div>
 
