--- a/app/client/templates/pages/television/television.scss
+++ b/app/client/templates/pages/television/television.scss
@@ -10,153 +10,33 @@
       }
     }
   }
-  .content {
-    padding-bottom:30px;
-  }
   .programs-list {
     margin:0;padding:0;list-style: none;
     .programs-list-item {
       a {
-        display:block;float:left;width:100%;
+        display:block;float:left;width:100%;height:128px;
         img {
-          width:100%;
+          width:100%;height:128px;
         }
       }
     }
-  }
-
-  .info-program {
-    margin-top:20px;
-    .program-description {
-      color:#9FACB4;font-size:14px;line-height:18px;padding:0 0.75rem;letter-spacing:-0.01em;
-    }
-    small {font-size:12px;color:#C8C8C8;width:100%;display:table;}
-    strong {
-      color:#798B91;font-weight:800;font-size:16px;
+    .list-category {
+      strong{padding:8px 5px;color:#798A91;font-size:12px;font-weight:bold;display:table;width:100%;}
     }
   }
 
-
-  .tab-flow  {
-    height:100%;min-height:100%;
-    .tab-header {
-      width:100%;
-      .tabs {
-        .indicator {
-          background-color: #62A0BD!important;
-        }
-        .tab {
-          @extend .col;
-          @extend .s3;
-          .active {
-            color:#62A0BD!important;font-weight:800;
-          }
-          a {
-            color:#ccc;letter-spacing:-0.03em;text-transform:none;font-size:16px;
-          }
-
-        }
-      }
-    }
-    .tab-container {
-      height:100%;min-height:100%;background:#F8F8FC!important;
-      .tab-content {
-        padding:20px 0;
-        @extend .col;
-        @extend .s12;
-      }
-    }
-  }
 
 }
 
-.show-message {
-  .message {
-    display:block!important;
-  }
+.back-to-home {
+  color:#798A91!important;
 }
 
-
-.message {
-  position:fixed;left:0;bottom:0;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);height:48px;background:#fff;overflow:hidden;display:none!important;
-
-  .input-field {
-    padding-left:74px;margin-top:0!important;padding-right:50px;
-    input {
-      margin-bottom:0!important;height:48px!important;line-height:48px!important;color:#c8c8c8;
-    }
-  }
-
-  .send-button {
-        position: absolute;
-        right: 0.75rem;
-        bottom: 10px;
-        padding: 0;
-        height: 26px;
-
-        &:hover {
-          background:transparent!important;box-shadow:0 0 0 0!important;
-        }
-  }
-
-  .buttons-actions {
-    margin:15px 0;padding-left:0.75rem;
+#television-navigation {
+  .item-nav {
+    height:46px!important;line-height:46px!important;clear:both;
     a {
-      &:first-child {
-        margin-right:5px;
-      }
-    }
-  }
-
-}
-
-
-.message-item {
-  padding:0 0.75rem;margin-bottom:2rem;
-  figure {
-    margin:0 0 0 0;
-  }
-  .message-info {
-    padding-left:82px;line-height:38px;height:38px;
-    .message-author {
-      float:left;height:38px;line-height:28px;margin:0;
-      a {font-size:14px;color:#666;line-height:38px!important;height:38px!important;font-weight:600;}
-    }
-    .message-date {
-      float:right;color:#c8c8c9;font-size:12px;
-      img {
-        float:left;margin-right:4px;margin-top:11px
-      }
-      span {float:left;}
-    }
-  }
-  .message-content {
-   padding:10px; margin-left:80px!important;background:#fff;box-shadow:2px 2px 4px 0 rgba(0,0,0,.1);clear:right;
-   border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;
-   a {
-    display:block;
-   }
-   p {
-    color:#798B91;margin:0;
-   }
-   img {
-    border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;margin-top:10px;
-   }
-  }
-}
-
-
-.poll-result {
-  width:100%;display:table;
-}
-
-
-.message-feedback {
-  margin:20px 0 40px 0!important;
-  .btn {
-    background:#798B91!important;
-    &:focus, &:active {
-      background:#6B797F!important;
+      font-size:18px;height:46px!important;line-height:46px!important;color:#798A91;
     }
   }
 }
