--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -48,17 +48,17 @@
             <ul class="tabs">
 
               <li class="tab" id="btn-show-message">
-                <a class="active" href="#test1">Timeline</a>
+                <a class="active" href="#tab1">Timeline</a>
               </li>
               <li class="tab" id="btn-hide-message">
-                <a href="#test2">Enquete</a>
+                <a href="#tab2">Enquete</a>
               </li>
 
             </ul>
           </div>
 
           <div class="tab-container">
-            <div id="test1" class="tab-content">
+            <div id="tab1" class="tab-content">
 
               <div class="message-item">
 
@@ -209,7 +209,7 @@
               </div>
 
             </div>
-            <div id="test2" class="tab-content">
+            <div id="tab2" class="tab-content">
 
 
               {{> pollOk }}
