--- a/app/client/templates/pages/television/pages/program/components/message/addMessage.html
+++ b/app/client/templates/pages/television/pages/program/components/message/addMessage.html
@@ -1,13 +1,12 @@
 <template name="addMessage">
 
-
-  <aside class="message roomUpIn">
+  <div class="message roomUpIn">
 
     <div class="buttons-actions left">
-      <a href="#">
+      <a href="#" id="btn-show-add-image">
         <img src="/images/television/icons/icon-photo.svg" height="16" />
       </a>
-      <a href="#">
+      <a href="#" id="btn-show-add-video">
         <img src="/images/television/icons/icon-video.svg" height="14" />
       </a>
     </div>
@@ -20,5 +19,11 @@
       <img src="/images/television/icons/icon-send-active.svg" height="20" />
     </button>
 
-  </aside>
+    {{> addImage }}
+    {{> addVideo }}
+
+  </div>
+
+  {{> fileMessage }}
+
 </template>
