--- a/app/client/templates/pages/television/pages/program/program.scss
+++ b/app/client/templates/pages/television/pages/program/program.scss
@@ -12,7 +12,7 @@
 
 
 .tab-flow  {
-  height:100%;min-height:100%;margin-bottom:0;
+  height:100%;min-height:100%;margin-bottom:0!important;
   .tab-header {
     width:100%;
     .tabs {
@@ -52,7 +52,7 @@
 
 
 .message {
-  bottom:-52px;position:fixed;left:0;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);height:48px;background:#fff;opacity:0;
+  bottom:-52px;position:fixed;left:0;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);height:48px;background:#fff;opacity:0;z-index:5;
 
 
   transition:all .4s ease-in-out;
@@ -60,7 +60,7 @@
   -moz-transition:all .4s ease-in-out;
 
   .input-field {
-    padding-left:74px;margin-top:0!important;padding-right:50px;
+    padding-left:74px;margin-top:0!important;padding-right:50px;position:relative;z-index:2;
     input {
       margin-bottom:0!important;height:48px!important;line-height:48px!important;color:#c8c8c8;
     }
@@ -79,7 +79,7 @@
   }
 
   .buttons-actions {
-    margin:15px 0;padding-left:0.75rem;
+    margin:15px 0;padding-left:0.75rem;position:relative;z-index:4;
     a {
       &:first-child {
         margin-right:5px;
@@ -147,5 +147,105 @@
     &:focus, &:active {
       background:#6B797F!important;
     }
+  }
+}
+
+
+
+.add-image, .add-video {
+  padding:20px;background:#f8f8fc;position:absolute;left:0;bottom:-100px;z-index:1;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);opacity:0;visibility:hidden;
+
+  transition:all .4s ease-in-out;
+  -webkit-transition:all .4s ease-in-out;
+  -moz-transition:all .4s ease-in-out;
+
+  .btn {
+    box-shadow:0 0 0 0 !important;background:transparent!important;border:1px solid #e5e5e5!important;color:#666!important;border-radius:2px;display:table;margin:0 auto;background:#fff!important;font-size:14px;font-weight:bold;
+  }
+
+}
+
+.ou {
+  position:relative;width:100%;text-align: center;display:table;margin:15px 0;color:#999;font-size:14px;
+  &:before {
+       width: 45%;
+      left: 0;
+      height: 1px;
+      top: 10px;
+      background: #e5e5e5;
+      content: "";
+      position: absolute;
+  }
+  &:after {
+       width: 45%;
+      right: 0;
+      height: 1px;
+      top: 10px;
+      background: #e5e5e5;
+      content: "";
+      position: absolute;
+  }
+}
+
+
+  .add-image-buttons {
+     #btn-show-add-video {
+      opacity:0.2;
+    }
+    .add-video {
+      opacity:0;visibility:hidden;bottom:-100px;
+    }
+    .add-image {
+      opacity:1;visibility:visible;bottom:52px;
+    }
+  }
+
+  .add-video-buttons {
+     #btn-show-add-image {
+      opacity:0.2;
+    }
+    .add-image {
+      opacity:0;visibility:hidden;bottom:-100px;
+    }
+    .add-video {
+      opacity:1;visibility:visible;bottom:52px;
+    }
+  }
+
+  .add-image-buttons, .add-video-buttons {
+    position:relative;
+
+    &:before {
+      width:100%;height:100%;z-index:1;background:rgba(255, 255, 255, 0.85);content:"";position:absolute;left:0;top:0;
+    }
+
+    .message {
+      box-shadow: 0 0 0 0!important;bottom:-52px!important;
+    }
+
+  }
+
+  #btn-close-add-image, #btn-close-add-video, #btn-cancel-file {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding:10px;
+  }
+
+
+
+ .file-message {
+  padding:0;background:#f8f8fc;position:absolute;left:0;bottom:0;z-index:1;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);visibility: 0;opacity:0;
+
+  transition:all .4s ease-in-out;
+  -webkit-transition:all .4s ease-in-out;
+  -moz-transition:all .4s ease-in-out;
+
+}
+
+
+.show-file-message {
+  .file-message {
+    bottom:0!important;visibility: 1;opacity:1;
   }
 }
