Escopo Rede Meio Norte Finalizado

--- a/app/client/templates/pages/authentication/authentication.scss
+++ b/app/client/templates/pages/authentication/authentication.scss
@@ -80,7 +80,7 @@
   }
 
   .sign-in {
-    position:fixed;bottom:0;left:0;width:100%;
+    position:absolute;bottom:0;left:0;width:100%;
 
     span {
       width:100%;text-align: center;margin-bottom:5px;float:left;color:#405590;
