--- a/app/client/templates/pages/television/pages/program/pages/polls/notFoundPolls.html
+++ b/app/client/templates/pages/television/pages/program/pages/polls/notFoundPolls.html
@@ -1,6 +1,6 @@
-<template name="notFoundPoll">
+<template name="notFoundPolls">
 
-  <div class="message-feedback center-align">
+  <div class="message-feedback center-align hide">
 
     <img src="/images/television/icons/icon-alert.svg"  height="95" />
 
