--- a/app/client/templates/pages/television/pages/program/pages/polls/pollsOk.html
+++ b/app/client/templates/pages/television/pages/program/pages/polls/pollsOk.html
@@ -1,6 +1,6 @@
-<template name="pollOk">
+<template name="pollsOk">
 
-  <div class="message-feedback center-align" style="display:none!important;">
+  <div class="message-feedback center-align hide">
 
     <img src="/images/television/icons/icon-ok.svg"  height="95" />
 
