--- a/app/client/stylesheets/app.scss
+++ b/app/client/stylesheets/app.scss
@@ -1506,3 +1506,13 @@ html {
 .side-nav {
   height:130%;
 }
+
+
+
+.hide {
+  display:none;visibility: hidden;opacity:0;
+}
+
+.show {
+  display:block;visibility: visible;opacity:1;
+}
