--- a/app/client/templates/pages/home/home.scss
+++ b/app/client/templates/pages/home/home.scss
@@ -78,11 +78,12 @@
 
 #main-navigation {
   .item-logout {
-        position: absolute;
-      bottom: 60px;
-      padding: 15px;
-      width: 300px;
-      background: #f8f8fc;
+    position: fixed;
+    bottom: 0;
+    padding: 15px;
+    width: 300px;
+    background: #f8f8fc;
+    left: 0;
       a {
         line-height:22px;height:22px;
       }
