--- a/app/client/templates/pages/television/pages/program/program.html
+++ b/app/client/templates/pages/television/pages/program/program.html
@@ -60,161 +60,16 @@
           <div class="tab-container">
             <div id="tab1" class="tab-content">
 
-              <div class="message-item">
-
-                <figure class="left">
-                  <a href="#">
-                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
-                  </a>
-                </figure>
-
-                <div class="message-info">
-                  <h4 class="message-author">
-                    <a href="#">
-                      Aírton Menezes
-                    </a>
-                  </h4>
-                  <div class="message-date">
-                    <img src="/images/television/icons/icon-clock.svg" height="14" />
-                    <span>12 min</span>
-                  </div>
-                </div>
-
-
-                <div class="message-content">
-                  <p>
-                    Rua toda esburacada aqui no Parque Alvorada
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="message-item">
-
-                <figure class="left">
-                  <a href="#">
-                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
-                  </a>
-                </figure>
-
-                <div class="message-info">
-                  <h4 class="message-author">
-                    <a href="#">
-                      Aírton Menezes
-                    </a>
-                  </h4>
-                  <div class="message-date">
-                    <img src="/images/television/icons/icon-clock.svg" height="14" />
-                    <span>12 min</span>
-                  </div>
-                </div>
-
-
-                <div class="message-content">
-                  <p>
-                    Rua toda esburacada aqui no Parque Alvorada
-                  </p>
-                  <a href="#">
-                    <img src="/images/television/img1.png" width="100%" />
-                  </a>
-                </div>
-
-              </div>
-
-              <div class="message-item">
-
-                <figure class="left">
-                  <a href="#">
-                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
-                  </a>
-                </figure>
-
-                <div class="message-info">
-                  <h4 class="message-author">
-                    <a href="#">
-                      Aírton Menezes
-                    </a>
-                  </h4>
-                  <div class="message-date">
-                    <img src="/images/television/icons/icon-clock.svg" height="14" />
-                    <span>12 min</span>
-                  </div>
-                </div>
-
-
-                <div class="message-content">
-                  <p>
-                    Rua toda esburacada aqui no Parque Alvorada
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="message-item">
-
-                <figure class="left">
-                  <a href="#">
-                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
-                  </a>
-                </figure>
-
-                <div class="message-info">
-                  <h4 class="message-author">
-                    <a href="#">
-                      Aírton Menezes
-                    </a>
-                  </h4>
-                  <div class="message-date">
-                    <img src="/images/television/icons/icon-clock.svg" height="14" />
-                    <span>12 min</span>
-                  </div>
-                </div>
-
-
-                <div class="message-content">
-                  <p>
-                    Rua toda esburacada aqui no Parque Alvorada
-                  </p>
-                </div>
-
-              </div>
-
-              <div class="message-item">
-
-                <figure class="left">
-                  <a href="#">
-                    <img src="/images/avatar/avatar1.png" width="65" height="65" />
-                  </a>
-                </figure>
-
-                <div class="message-info">
-                  <h4 class="message-author">
-                    <a href="#">
-                      Aírton Menezes
-                    </a>
-                  </h4>
-                  <div class="message-date">
-                    <img src="/images/television/icons/icon-clock.svg" height="14" />
-                    <span>12 min</span>
-                  </div>
-                </div>
-
-
-                <div class="message-content">
-                  <p>
-                    Rua toda esburacada aqui no Parque Alvorada
-                  </p>
-                </div>
-
-              </div>
+              <section class="timeline-content">
+                {{> timeline }}
+              </section>
 
             </div>
             <div id="tab2" class="tab-content">
 
-
-              {{> pollOk }}
-              {{> notFoundPoll }}
-
+              <section class="polls-content">
+                {{> polls }}
+              </section>
 
             </div>
           </div>
