--- a/app/client/templates/pages/television/pages/program/program.scss
+++ b/app/client/templates/pages/television/pages/program/program.scss
@@ -35,7 +35,7 @@
   .tab-container {
     height:100%;min-height:100%;background:#F8F8FC!important;
     .tab-content {
-      padding:35px 0 50px 0;position:relative;
+      padding:0 0 50px 0;position:relative;
       @extend .col;
       @extend .s12;
     }
@@ -235,7 +235,7 @@
 
 
  .file-message {
-  padding:0;background:#f8f8fc;position:absolute;left:0;bottom:0;z-index:1;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);visibility: 0;opacity:0;
+  padding:0;background:#f8f8fc;position:absolute;left:0;bottom:0;z-index:1;width:100%;box-shadow:0 -2px 10px -4px rgba(0,0,0,0.3);visibility: hidden;opacity:0;
 
   transition:all .4s ease-in-out;
   -webkit-transition:all .4s ease-in-out;
@@ -246,6 +246,109 @@
 
 .show-file-message {
   .file-message {
-    bottom:0!important;visibility: 1;opacity:1;
+    bottom:0!important;visibility: visible!important;opacity:1!important;
   }
 }
+
+.timeline-content, .polls-content {
+  padding:20px;
+}
+
+
+.polls-content {
+
+  .vote {
+    span {
+      &:before {position:absolute;left:0;top:-18px;font-size:10px;font-weight:bold;content:"MEU VOTO";color:#62A0BD;}
+    }
+  }
+
+  .results-question {
+
+    .polls-answers-item {
+      padding-left:185px !important;
+
+      strong {
+        position: absolute;
+        left: 12px;
+        top: 6px;
+        font-size: 26px;
+        color:#798B91;
+      }
+
+      img {
+        left:130px !important;
+      }
+      span {color:#9e9e9e;}
+
+      &:before {
+        position: absolute;
+        left: 90px;
+        top: 18px;
+        width: 10px;
+        height: 10px;
+        background: #D8D8D8;
+        content: "";
+        border-radius:50%;
+        -webkit-border-radius:50%;
+        -moz-border-radius:50%;
+      }
+      &:after {
+        position: absolute;
+        left: 94px;
+        top: 18px;
+        width: 2px;
+        height: 55px;
+        background: #D8D8D8;
+        content: "";
+      }
+      &:last-child {
+         &:after {
+          display:none!important;
+         }
+      }
+    }
+
+  }
+
+  .polls-question {
+    font-size: 18px;
+    line-height: 22px;
+    color:#7A8B91;
+    display: table;
+    margin-bottom: 20px;
+  }
+  .polls-answers {
+    margin:10px 0;
+    [type="checkbox"]:checked + label:before {
+      border-bottom-color:#62A0BD!important;
+      border-right-color:#62A0BD!important;
+    }
+    .polls-answers-item {
+      margin-bottom:5px;display:block;position:relative;padding:12px 0 12px 60px;
+      img {
+        position:absolute;left:0;top:4px;
+      }
+      span {
+          position: relative;
+          padding-left: 0;
+          cursor: pointer;
+          display: inline-block;
+          height: 25px;
+          line-height: 25px;
+          font-size: 1rem;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -khtml-user-select: none;
+          -ms-user-select: none;
+      }
+    }
+    .poll-answers-footer {
+      position:absolute;bottom:0;left:0;width:100%;
+      .btn {
+        width:100%;border-radius:0!important;-webkit-border-radius:0!important;-moz-border-radius:0!important;background:#84D672;
+      }
+    }
+  }
+}
+
