--- a/app/client/templates/pages/home/home.scss
+++ b/app/client/templates/pages/home/home.scss
@@ -78,7 +78,7 @@
 
 #main-navigation {
   .item-logout {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     padding: 15px;
     width: 300px;
