--- a/app/client/templates/pages/television/layouts/navigationTelevision.html
+++ b/app/client/templates/pages/television/layouts/navigationTelevision.html
@@ -8,20 +8,14 @@
     </a>
 
     <li class="item-nav">
-      <a class="link-nav" href="{{ pathFor 'aboutTelevision' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-        Conheça
+      <a class="link-nav" href="{{ pathFor 'television' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
+        Programas
       </a>
     </li>
 
     <li class="item-nav">
       <a class="link-nav" href="{{ pathFor 'programation' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
         Programação
-      </a>
-    </li>
-
-    <li class="item-nav">
-      <a class="link-nav" href="{{ pathFor 'contactTelevision' }}" data-transition-out="slideFadeLeftOut" data-transition-in="slideFadeRightIn">
-        Fale conosco
       </a>
     </li>
 
